--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,9 @@
             "warn", {
                 "singleQuote": true,
                 "bracketSpacing": false
+            },
+            "error", {}, {
+                "usePrettierrc": false
             }
         ],
         "no-unused-vars": "warn",
@@ -42,6 +45,7 @@
         "no-console": "off",
         "no-unexpected-multiline": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
+       "prefer-destructuring": "off",
         "comma-style": [
             1,
             "last"
