--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,10 @@
     },
     "extends": [
         "airbnb-base",
-        // "plugin:@typescript-eslint/recommended",
         "plugin:import/errors",
         "plugin:import/warnings",
         "plugin:import/typescript",
+        "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended",
         "prettier/@typescript-eslint"
     ],
@@ -30,11 +30,12 @@
     // overwrite rules on "extends"
     "rules": {
         "prettier/prettier": [
-            "warn", {
+            // "warn", {
+            //     "singleQuote": true
+            //     //"bracketSpacing": false
+            // },
+            "error", {
                 "singleQuote": true,
-                "bracketSpacing": false
-            },
-            "error", {}, {
                 "usePrettierrc": false
             }
         ],
@@ -45,11 +46,13 @@
         "no-console": "off",
         "no-unexpected-multiline": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
-       "prefer-destructuring": "off",
-        "comma-style": [
-            1,
-            "last"
-        ],
+        "prefer-destructuring": "off",
+        "array-bracket-spacing": ["error", "always", { "singleValue": true, "arraysInArrays": false }],
+        "block-spacing": ["error", "always"],
+        "brace-style": [ "error", "1tbs", { "allowSingleLine": true } ],
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "comma-style": [ 1, "last" ],
+
         "import/extensions": [
             "error",
             "ignorePackages",
