--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start": "yarn webpack-dev-server --open"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "three": "0.117.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.7.0",
+    "@types/dat.gui": "^0.7.5",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "babel-loader": "^8.0.0",
@@ -28,8 +30,8 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^1.19.1",
-    "tsconfig-paths": "^3.9.0",
     "ts-loader": "^7.0.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
