--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn webpack --mode=production",
-    "start": "yarn webpack-dev-server --open"
+    "start": "yarn webpack-dev-server"
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
