--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Hajime-san <utd.c.r.d.s.a@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn webpack --mode=production",
-    "start": "yarn webpack-dev-server"
+    "build": "webpack --mode=production",
+    "start": "webpack serve"
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
@@ -19,6 +19,7 @@
     "@types/dat.gui": "^0.7.5",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "@webpack-cli/serve": "^1.2.0",
     "babel-loader": "^8.0.0",
     "browser-sync": "^2.26.7",
     "eslint": "^6.7.0",
@@ -33,8 +34,8 @@
     "ts-loader": "^7.0.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
