--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-      "module": "amd",
+      "module": "es6",
       "sourceMap": true,
       "target": "es5",
       "outDir": "dist",
